-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
3
-
15411
When restarting MDT 0 and MDT 1 one by one after a minor upgrade, a flood of this message was printed by MDT 0:
Aug 22 03:16:28 lola-8 kernel: LustreError: 11932:0:(tgt_handler.c:478:tgt_filter_recovery_request()) @@@ not permitted during recovery req@ ffff88083632dc00 x1477131648377368/t0(0) o901->soaked-MDT0000-lwp-MDT0001_UUID@192.168.1.109@o2ib:0/0 lens 248/0 e 0 to 0 dl 1408702578 ref 1 fl Interpret:/0/ffffffff rc 0/-1 [Repeats rapidly...]
Meanwhile from MDT 1:
Aug 22 03:16:07 lola-9 kernel: LustreError: 11-0: soaked-MDT0000-lwp-MDT0001: Communicating with 192.168.1.108@o2ib, operation fld_read faile d with -11. [Repeats rapidly...]
- is blocking
-
LU-2034 Modify Changelogs to work with New OSD and LLOG APIs
-
- Resolved
-