lustre/target/tgt_handler.c
@@ -475,6 +475,7 @@ static int tgt_filter_recovery_request(struct ptlrpc_request *req,
 	case OUT_UPDATE:
 	case SEQ_QUERY:
 	case FLD_QUERY:
+	case FLD_READ:
 	case LDLM_ENQUEUE:
 	case OST_CREATE:
 	case OST_DESTROY:
